@ docs: add comprehensive security and code quality review report
Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>
@